# covesa_vss_frontend

./: .gitignore  BUSINESS_CASE.md  Body_SDV_Platform_ARCHITECTURE.md  CLAUDE.md  PLATFORM_TECHNICAL_REQUIREMENTS.md  README.md  SDV_Body_Platform_Proposal.md  index.html  vss-hmi-body-actuators.html  vss-hmi-body-sensors.html  vss-hmi-config.html  vss-hmi.html
vss-bridge/: Cargo.toml  build.rs  deny.toml
vss-bridge/config/examples/: variant_base.json  variant_coupe.json  variant_offroad_removable.json  variant_premium.json
vss-bridge/features/: auto_lock.feature  auto_relock.feature  door_lock_arbiter.feature  hazard.feature  high_beam.feature  lock_feedback.feature  low_beam.feature  peps.feature  turn_indicator.feature
vss-bridge/overlay/Body/: DoorLockInputs.vspec  SwitchInputs.vspec
vss-bridge/src/: arbiter.rs  config.rs  ipc_message.rs  kuksa_sync.rs  lib.rs  main.rs  nvm.rs  signal_bus.rs  signal_ids.rs  sleep_inhibit.rs  ws_bridge.rs
vss-bridge/src/adapters/: mock.rs
vss-bridge/src/features/: auto_high_beam.rs  auto_relock.rs  brake_reverse_lamps.rs  cabin_trunk_release.rs  child_lock.rs  delayed_accessory.rs  dome_switch.rs  door_open_assist.rs  door_trim_button.rs  double_lock_release.rs  exterior_trunk_button.rs  farewell.rs  fog_lamps.rs  follow_me_home.rs  hazard_lighting.rs  key_search_arbiter.rs  lock_feedback.rs  manual_horn.rs  manual_lighting.rs  mirror_adjust.rs  mirror_fold.rs  mod.rs  nfc_entry.rs  panic_alarm.rs  passive_entry.rs  perimeter_alarm.rs  power_child_lock.rs  power_window.rs  power_window_driver.rs  power_window_local.rs  rke.rs  slam_lock.rs  sunroof_control.rs  thumb_pad_lock.rs  turn_indicator.rs  vehicle_starting_control.rs  walk_away_lock.rs  welcome.rs  window_lockout.rs
vss-bridge/src/plant_models/: blink_relay.rs  brake.rs  chime.rs  day_night_mode.rs  door_handle.rs  door_lock.rs  hood.rs  mirror_adjust.rs  mirror_fold.rs  mod.rs  sunroof.rs  transmission.rs  trunk.rs  window.rs
vss-bridge/tests/: ws_integration.rs
vss-bridge/tests/e2e/: main.rs  steps.rs
(+41 files in other folders)
