[package]
name = "vss-bridge"
version = "0.1.0"
edition = "2021"
description = "COVESA VSS body controller bridge — L5 application layer"

[dependencies]
tokio           = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tonic           = "0.11"
prost           = "0.12"
prost-types     = "0.12"
crc             = "3"
thiserror       = "1"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
async-trait     = "0.1"
bytes           = "1"
futures         = "0.3"
tokio-stream    = { version = "0.1", features = ["sync"] }
anyhow          = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build     = "0.11"
