[package]
name = "vss-bridge"
version = "0.1.0"
edition = "2021"
description = "COVESA VSS body controller bridge — L5 application layer"

[lib]
name = "vss_bridge"
path = "src/lib.rs"

[[bin]]
name = "vss-bridge"
path = "src/main.rs"

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
harness = false

[[test]]
name = "ws_integration"
path = "tests/ws_integration.rs"

[dependencies]
tokio           = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tonic           = "0.13"
prost           = "0.13"
prost-types     = "0.13"
crc             = "3"
thiserror       = "1"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
async-trait     = "0.1"
bytes           = "1"
futures         = "0.3"
tokio-stream    = { version = "0.1", features = ["sync"] }
anyhow          = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastrand         = "2"

[dev-dependencies]
tokio           = { version = "1", features = ["full", "test-util"] }
cucumber        = "0.21"
futures         = "0.3"
tokio-tungstenite = "0.26"
serde_json      = "1"

[build-dependencies]
tonic-build     = "0.13"
